<resources>
    <string name="google_analytic_id">UA-65527348-45</string>
    <string name="GoogleIntersitialAddid">ca-app-pub-8140216007326867/3542977636</string>
    <string name="admob_publisher_id">ca-app-pub-8140216007326867/3542977636</string>
    <string name="facebookAddId">1739053329687000_1739053503020316</string>
    <string name="mopub_add_unit_id">b94edc3745c94243bb613ce0d3884ef6</string>
    <string name="month_jan">Muharram</string>
    <string name="month_feb">Safar</string>
    <string name="month_mar">Rabiul Awwal</string>
    <string name="month_apr">Rabiul Akhir</string>
    <string name="month_may">Jumadal Ula</string>
    <string name="month_jun">Jumadal Akhira</string>
    <string name="month_jul">Rajab</string>
    <string name="month_aug">Shaaban</string>
    <string name="month_sep">Ramadhan</string>
    <string name="month_oct">Shawwal</string>
    <string name="month_nov">Dhulqaada</string>
    <string name="month_dec">Dhulhijja</string>
    <string-array name="date_converter_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>Decembers</item>
    </string-array>
    <string-array name="date_converter_monthsh">
        <item></item>
        <item>Muharram</item>
        <item>Safar</item>
        <item>Rabiul Awwal</item>
        <item>Rabiul Akhir</item>
        <item>Jumadal Ula</item>
        <item>Jumadal Akhira</item>
        <item>Rajab</item>
        <item>Shaaban</item>
        <item>Ramadhan</item>
        <item>Shawwal</item>
        <item>Dhulqaada</item>
        <item>Dhulhijja</item>
    </string-array>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">Muslim Prayers Pro</string>
    <string name="hello_world">Hello world!</string>
    <string name="background">Backgrounds</string>
    <string name="action_settings">Settings</string>
    <string name="txt_counter">%s/100</string>
    <string name="txt_counter_dua">%s/8</string>
    <string name="lbl_shahdah">Shahadah</string>
    <string name="lbl_shahdah_txt1">\t\t\t la ’ilaha ’illa-llah,\nmuhammadur rasﬁlu-llah</string>
    <string name="lbl_shahdah_txt2">I declare that there is no diety worthy of  worship except Allah; and i declare that Muhhamad is the messanger of Allah.</string>
    <string name="lbl_salat">Salah</string>
    <string name="lbl_sawn">Fasting</string>
    <string name="lbl_zakat">Zakat</string>
    <string name="lbl_hajj">Hajj</string>
    <string name="lbl_pillar_title">5 Pillars of Isalm</string>
    <string name="lbl_prayertimes_title">Prayers</string>
    <string name="progress_dialog">Getting Location…</string>
    <string name="please_wait">Please wait…</string>
    <string name="nointernet">Please Enable Internet</string>
    <string name="nolocation">Unable to Get The Location</string>
    <string name="edittext_pref_title">DayLight Saving</string>
    <string name="edittext_pref_Imsak_title">Imsak DayLight Saving</string>
    <string name="edittext_pref_Fajar_title">Fajar DayLight Saving</string>
    <string name="edittext_pref_Dhuhr_title">Dhuhr DayLight Saving</string>
    <string name="edittext_pref_Asr_title">Asr DayLight Saving</string>
    <string name="edittext_pref_Maghrib_title">Maghrib DayLight Saving</string>
    <string name="edittext_pref_Isha_title">Isha DayLight Saving</string>
    <string name="edittext_pref_desc">Enter DayLight Saving</string>
    <string name="edittext_pref_dialogtitle">DayLight Saving</string>
    <string name="edittext_pref_optionalvalue">0</string>
    <string name="optional_dialog_message">Enter in minutes</string>
    <string name="lbl_prayer">Prayers</string>
    <string name="lbl_calendar">Calendar</string>
    <string name="lbl_qibla">Qibla</string>
    <string name="lbl_mosquee">Mosques</string>
    <string name="lbl_tasbee">Tasbih</string>
    <string name="lbl_hadith">40 Hadith</string>
    <string name="lbl_message">Messages</string>
    <string name="lbl_places">Halal</string>
    <string name="lbl_popular">Verses</string>
    <string name="lbl_shahadah">Shahadah</string>
    <string name="lbl_date">Converter</string>
    <string name="lbl_pillar">5 Pillars</string>
    <string name="lbl_duas">Duas</string>
    <string name="lbl_quran">Quran</string>
    <string name="lbl_names">Names</string>
    <string name="searching_mosques">Searching Mosques...</string>
    <string name="show_places_onmap">Show Places on Map</string>
    <string name="topbar_your_location">Choose Your Location</string>
    <string name="topbar_halal_places">Halal Places</string>
    <string name="loading_halal_places">Loading Halal Places...</string>
    <string name="title_menu_ramdantime">Ramadan</string>
    <string name="title_lbl_prayer">Prayers</string>
    <string name="title_lbl_calendar">Calendar</string>
    <string name="title_lbl_duas">Duas</string>
    <string name="title_lbl_places">Halal Places</string>
    <string name="title_lbl_mosquee">Mosques</string>
    <string name="title_lbl_names">Names</string>
    <string name="title_lbl_qibla">Qibla</string>
    <string name="title_lbl_popular">Popular Verses</string>
    <string name="title_lbl_quran">Quran</string>
    <string name="title_lbl_shahadah">Shahadah</string>
    <string name="title_lbl_message">Messages</string>
    <string name="title_lbl_tasbee">Tasbih</string>
    <string name="title_lbl_date">Convertor</string>
    <string name="title_lbl_hadith">Hadith</string>
    <string name="title_lbl_pillar">5 Pillars</string>
    <string name="title_full_screen_tasbeeh">Full Screen Tasbeeh</string>
    <string name="ans_ok">OK</string>
    <string name="title_backgrounds">Backgrounds</string>
    <string name="toast_songisplaying">Song is Playing Already</string>
    <string name="toast_wait">Please wait…loading</string>
    <string name="toast_selectsong">Please select Ayat to play</string>
    <string name="toast_compasschanged">Compass Changed</string>
    <string name="toast_alarmdisabled">Alarm Disabled</string>
    <string name="toast_alarmenabled">Alarm Enabled</string>
    <string name="toast_prayerhasbeenpassed">Prayer has been passed, Alarm set for Next Day</string>
    <string name="toast_tasbeereached">Reached</string>
    <string name="toast_notasbeeinlist">No Tasbeeh to List</string>
    <string name="toast_copiedtoclipboard">Copied to clipboard</string>
    <string name="Market">More Apps</string>
    <string name="lang_English">English</string>
    <string name="lang_French">French</string>
    <string name="lang_German">German</string>
    <string name="lang_Indonesian">Indonesian</string>
    <string name="lang_Malay">Malay</string>
    <string name="lang_Spanish">Spanish</string>
    <string name="lang_Turkish">Turkish</string>
    <string name="lang_Urdu">Urdu</string>
    <string name="menu_ramdantime">Ramadan</string>
</resources>