<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:id="@+id/ch_eng" android:padding="@dimen/grid_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_English" />
    <CheckBox android:id="@+id/ch_fren" android:padding="@dimen/grid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_French" />
    <CheckBox android:id="@+id/ch_germ" android:padding="@dimen/grid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_German" />
    <CheckBox android:id="@+id/ch_indo" android:padding="@dimen/grid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_Indonesian" />
    <CheckBox android:id="@+id/ch_mala" android:padding="@dimen/grid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_Malay" />
    <CheckBox android:id="@+id/ch_span" android:padding="@dimen/grid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_Spanish" />
    <CheckBox android:id="@+id/ch_turk" android:padding="@dimen/grid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_Turkish" />
    <CheckBox android:id="@+id/ch_urdu" android:padding="@dimen/grid_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lang_Urdu" />
</LinearLayout>