<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearPager1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/ll_quran"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/browser_open_bookmarks"
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/quran"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/lbl_quran"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_prayer_times"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/prayertimes"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/lbl_prayertimes_title"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_market"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/img_market"
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:src="@drawable/gift"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/Market"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <LinearLayout
                android:id="@+id/ll_qibla_compass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/qcompass"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/lbl_qibla"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_calendar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="browserActionClicked"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/calendar"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/lbl_calendar"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_mosque_finder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/mosquee"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/lbl_mosquee"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_date_converter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/converter"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/lbl_date"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tasbeeh_counter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/tashbee"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_tasbee"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_duas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/linearLayout12"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/duas"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/lbl_duas"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>