<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearPager2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/ll_ramadan_times"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/ramdantimes"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/menu_ramdantime"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_hadith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/hadith"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_hadith"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pillars_of_islam"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/pillars"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_pillar"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <LinearLayout
                android:id="@+id/ll_places"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_halal"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_places"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_name_of_allah"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/names"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_names"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_shahadah"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_shahadah"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_shahadah"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <LinearLayout
                android:id="@+id/ll_message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_message"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_message"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_popular"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/pager_image_size"
                    android:layout_height="@dimen/pager_image_size"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_popular"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="6dp"
                    android:singleLine="true"
                    android:text="@string/lbl_popular"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>